fixed a small issue with ajax loader spacing

--- a/public/stylesheets/snorby.css
+++ b/public/stylesheets/snorby.css
@@ -12,14 +12,14 @@ div.dialog {
 	float: left;
 	margin-top: -25px;
 	display: inline;
-	margin-left: 62px;
+	margin-left: 69px;
 }
 
 #loading_sensor{
 	float: left;
-	margin-top: -25px;
+	margin-top: -24px;
 	display: inline;
-	margin-left: 125px;
+	margin-left: 134px;
 }
 
 #loading_dash{
